<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings">

    <Button
        android:id="@+id/button9"
        android:layout_width="228dp"
        android:layout_height="96dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="#78092F"
        android:onClick="onClickStart"
        android:text="@string/start"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/setting"
        android:textAlignment="center"
        android:textColor="#78092F"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toggleDesc"
        android:layout_width="155dp"
        android:layout_height="115dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/timeDesc"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/worldTog"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="125dp"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="29dp"
        android:text="@string/timeToggle"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Switch
        android:id="@+id/quesTog"
        android:layout_width="124dp"
        android:layout_height="33dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/quesSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/worldTog" />

    <TextView
        android:id="@+id/toggleDesc2"
        android:layout_width="153dp"
        android:layout_height="128dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/limitDecs"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/timeAmount"
        app:layout_constraintTop_toBottomOf="@+id/toggleDesc" />

    <ToggleButton
        android:id="@+id/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:textOff="@string/normal"
        android:textOn="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/buttonstyle"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeAmount" />

    <EditText
        android:id="@+id/timeAmount"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="125dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/limit"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quesTog" />

    <Switch
        android:id="@+id/worldTog"
        android:layout_width="124dp"
        android:layout_height="33dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:text="@string/worldSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>